@@ -4,7 +4,6 @@ import com.cydeo.dto.ClientVendorDto;
 import com.cydeo.entity.ClientVendor;
 import com.cydeo.entity.User;
 import com.cydeo.repository.ClientVendorRepository;
-import com.cydeo.repository.InvoiceRepository;
 import com.cydeo.repository.UserRepository;
 import com.cydeo.service.ClientVendorService;
 import com.cydeo.service.InvoiceService;
@@ -26,6 +25,7 @@ public class ClientVendorServiceImpl implements ClientVendorService {
     private final UserRepository userRepository;
     private final MapperUtil mapperUtil;
     private final InvoiceService invoiceService;
+
     public ClientVendorServiceImpl(ClientVendorRepository clientVendorRepository, UserRepository userRepository, MapperUtil mapperUtil,@Lazy InvoiceService invoiceService) {
         this.clientVendorRepository = clientVendorRepository;
         this.userRepository = userRepository;
@@ -35,24 +35,24 @@ public class ClientVendorServiceImpl implements ClientVendorService {
 
     @Override
     public List<ClientVendorDto> listAllClientVendor() {
-        List<ClientVendor> clientVendorRepositoryAll = clientVendorRepository.findAllByIsDeletedFalse();
+        List<ClientVendor> clientVendorRepositoryAll = clientVendorRepository.findAll();
         return clientVendorRepositoryAll.stream().map(p->mapperUtil.convert(p, new ClientVendorDto())).collect(Collectors.toList());
     }
 
-@Override
-public List<ClientVendorDto> listAllByCompanyTitle() {
-    String username= SecurityContextHolder.getContext().getAuthentication().getName();
-    User byUsername = userRepository.findByUsername(username);
-    List<ClientVendor> allByCompanyTitle = clientVendorRepository.findAllByCompanyTitleOrderByClientVendorName(byUsername.getCompany().getTitle());
-    List<ClientVendorDto> clientVendorList= allByCompanyTitle.stream().map(p->mapperUtil.convert(p, new ClientVendorDto())).collect(Collectors.toList());
-    List<ClientVendorDto> filteredList=clientVendorList.stream().map(cv->{
-                if( invoiceService.existByClientVendorId(cv.getId())){
-                    cv.setHasInvoice(true);
-                }return cv;
-            }
-    ).toList();
-    return filteredList;
-}
+    @Override
+    public List<ClientVendorDto> listAllByCompanyTitle() {
+        String username= SecurityContextHolder.getContext().getAuthentication().getName();
+        User byUsername = userRepository.findByUsername(username);
+        List<ClientVendor> allByCompanyTitle = clientVendorRepository.findAllByCompanyTitleAndIsDeletedOrderByClientVendorName(byUsername.getCompany().getTitle(),false);
+        List<ClientVendorDto> clientVendorList= allByCompanyTitle.stream().map(p->mapperUtil.convert(p, new ClientVendorDto())).collect(Collectors.toList());
+        List<ClientVendorDto> filteredList=clientVendorList.stream().map(cv->{
+                    if( invoiceService.existByClientVendorId(cv.getId())){
+                        cv.setHasInvoice(true);
+                    }return cv;
+                }
+        ).toList();
+        return filteredList;
+    }
 
     @Override
     public ClientVendorDto findById(Long id) {
@@ -75,7 +75,10 @@ public List<ClientVendorDto> listAllByCompanyTitle() {
         ClientVendor clientVendor = mapperUtil.convert(clientVendorDto,new ClientVendor());
         clientVendor.setCompany(user.getCompany());
         clientVendorRepository.save(clientVendor);
+
     }
+
+
 
     @Override
     public void update(ClientVendorDto clientVendorDto) {
@@ -83,9 +86,12 @@ public List<ClientVendorDto> listAllByCompanyTitle() {
             throw new IllegalArgumentException("ClientVendorDto or ClientVendor ID cannot be null");
 
         }
+
+
         ClientVendor clientVendor = clientVendorRepository.getReferenceById(clientVendorDto.getId());
         if (clientVendor==null){
             throw new EntityNotFoundException("Client/Vendor cannot be found with ID "+clientVendor.getId());
+
         }
 
         ClientVendor convertedClientVendor=mapperUtil.convert(clientVendorDto,new ClientVendor());
@@ -98,12 +104,12 @@ public List<ClientVendorDto> listAllByCompanyTitle() {
     @Override
     public void delete(Long id) {
         ClientVendor clientVendor=clientVendorRepository.findById(id).orElseThrow(
-                () -> new EntityNotFoundException("Client/Vendor cannot be found with ID "+id)
-        );
+                    () -> new EntityNotFoundException("Client/Vendor cannot be found with ID "+id)
+            );
         ClientVendorDto convertedClientVendor=mapperUtil.convert(clientVendor,new ClientVendorDto());
-        boolean hasInvoiceByClientVendorId=  invoiceService.existByClientVendorId(convertedClientVendor.getId());
-        if (! hasInvoiceByClientVendorId){
-            clientVendor.setIsDeleted(true);
+      boolean hasInvoiceByClientVendorId=  invoiceService.existByClientVendorId(convertedClientVendor.getId());
+       if (! hasInvoiceByClientVendorId){
+       clientVendor.setIsDeleted(true);
             clientVendorRepository.save(clientVendor);}
     }
 
